--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
     <title>Simple Navigation Bar</title>
 </head>
 <body>
-    <nav>
-        <table width="100%">
-            <tr>
-                <td><a href="#home">Home</a></td>
-                <td><a href="#signup">Signup</a></td>
-                <td><a href="#login">Login</a></td>
-                <td>
-                    <form action="#" method="get">
-                        <input type="text" name="search" placeholder="Search...">
-                        <button type="submit">Search</button>
-                    </form>
-                </td>
-            </tr>
-        </table>
-    </nav>
+    <table width="100%">
+        <tr>
+
+            <td><a href="#home" onclick="showMessage('Home Page')">Home</a></td>
+            <td><a href="#signup" onclick="showMessage('Signup Page')">Signup</a></td>
+            <td><a href="#login" onclick="showMessage('Login Page')">Login</a></td>
+            <td>
+                <form action="#" method="get">
+                    <input type="text" name="search" placeholder="Search...">
+                    <button type="submit">Search</button>
+                </form>
+            </td>
+        </tr>
+    </table>
+
+    <div id="message">Welcome to our website!</div>
+    <script>
+        function showMessage(message) {
+            document.getElementById('message').innerText = message;
+        }
+    </script>
 </body>
 </html>
